--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "libs/sqlpp11"]
 	path = libs/sqlpp11
 	url = git@github.com:rbock/sqlpp11
+[submodule "libs/Simple-Web-Server"]
+	path = libs/Simple-Web-Server
+	url = https://gitlab.com/eidheim/Simple-Web-Server.git
